--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -70,6 +70,10 @@ p {
 }
 
 .md-typeset hr {
-    border-bottom: 2px dashed #0033a0; 
-    margin: 2em 0; 
+  border: 0;
+  width: 10%; 
+  border-top: 3px solid #0033a0; 
+  border-radius: 5px; 
+  margin: 4em auto; 
+  opacity: 0.7;
 }
