--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -70,10 +70,8 @@ p {
 }
 
 .md-typeset hr {
-  border: 0;
-  width: 80%; 
-  border-top: 3px solid #0033a0; 
-  border-radius: 5px; 
-  margin: 4em auto; 
-  opacity: 0.2;
+  border: 0; 
+  height: 1px; 
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #0033a0, rgba(0, 0, 0, 0));
+  margin: 3em 0; 
 }
