--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -65,10 +65,6 @@ p {
   font-size: 15px;
 }
 
-.md-typeset table:not([align]) {
-  font-size: 90%;
-}
-
 .md-typeset hr {
   border: 0; 
   height: 1px; 
@@ -85,4 +81,51 @@ p {
     border-radius: 15px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     margin-bottom: 2rem;
+}
+
+
+.md-typeset table:not([class]) {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 0em 0;
+    font-size: 0.95em;
+    display: table;
+    border: 1px solid #eee; 
+}
+
+.md-typeset table:not([class]) th {
+    background-color: #fff;
+    color: #0033a0; 
+    font-weight: bold;
+    padding: 15px;
+    border-bottom: 2px solid #eee;
+}
+
+.md-typeset table:not([class]) td {
+    padding: 12px 15px;
+    border-bottom: 1px solid #eee;
+    color: #555;
+}
+
+
+.md-typeset table:not([class]) tr:nth-child(even) {
+    background-color: #f8f9fa; 
+}
+
+.md-typeset table:not([class]) tr:hover td {
+    background-color: #e9ecef;
+    transition: 0.2s;
+}
+
+.footer-garden {
+    text-align: center;
+    font-size: 1.5em;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    opacity: 0.8;
+    user-select: none;
+    cursor: default;
+}
+.footer-garden span {
+    margin: 0 10px;
 }
