--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -23,8 +23,9 @@ p {
 }
 
 .md-typeset {
+  font-family: "Roboto";
   line-height: 1.5;
-  font-size: 15px;
+  font-size: 16px;
 }
 
 .md-typeset h1,
